--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: #f4f4f9;
-    color: #333;
+    color: z#000855;
     font-family: 'Arial', sans-serif;
     height: 100vh;
     margin: 0;
@@ -157,3 +157,8 @@ input:focus {
     width: 100%; /* Make SVG responsive to container width */
     height: 100%; /* Ensure SVG fills the height of the container */
 }
+
+svg {
+    width: 100%; /* Make SVG responsive to container width */
+    height: 100%; /* Ensure SVG fills the height of the container */
+  }
